--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,86 +1,26 @@
-@import "resets";
-@import "variables";
-@import "functions";
+// Defaults
+@import "defaults/variables.scss";
+@import "defaults/resets.scss";
+@import "defaults/functions.scss";
 
-body {
+// Components
+@import "components/header.scss";
+@import "components/buttons.scss";
+@import "components/banners.scss";
+@import "components/services.scss";
+@import "components/sections.scss";
+@import "components/about.scss";
+@import "components/gallery.scss";
+@import "components/brands.scss";
+@import "components/footer.scss";
 
-    background-color: $background-color;
+// Pages
+@import "pages/subpage.scss";
 
-}
-
-a {
-
-    color: $primary-color;
-    font-weight: map-get($font-weights, medium);
-
-}
-
-.header {
-
-    background-color: $secondary-color;
-    padding: 15px 0;
-
-    #{&}__menu {
-
-        @include flexCenter();
-        list-style: none;
-        padding: 10px;
-
-        a {
-
-            margin: 0 10px;
-            font-weight: weight("bold");
-            display: block;
-            font-size: 20px;
-            text-decoration: none;
-
-            &:hover {
-
-                color: $hover-color;
-
-            }
-        }
-
-        @include media("sm") {
-
-            flex-direction: column;
-
-            a {
-
-                margin: 5px 0px;
-
-            }
-
-        }
-
+// Style 
+@media (min-width: map-get($breaks, "xxl")) {
+    .container {
+        max-width: 1400px;
     }
 }
-
-.main {
-
-    padding: 10px;
-
-    #{&}__paragraph1 {
-
-        margin: 0 0 10px;
-
-        a {
-
-            color: $secondary-color;
-            text-decoration: none;
-
-            &:hover {
-
-                color: $hover-color;
-
-            }
-
-        }
-
-    }
-
-    #{&}__paragraph2 {
-        @extend .main__paragraph1;
-    }
-
-}
+  
