--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -109,4 +109,46 @@
             margin-top: 1.5rem;
         }
     }
+    &__subpage {
+        background-image: url("../img/subpage-bg.png");
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+    &__breadcrumb {
+        text-align: center;
+        padding: 4rem 0 3.5rem;
+            border-top: 1px solid #3d3d3d;
+        h1 {
+            color: $primary-color-darkbg;
+            font-size: 44px;
+            font-weight: 600;
+            letter-spacing: -0.5px;
+        }
+        ul {
+            display: flex;
+            list-style: none;
+            @include widthFit();
+            margin: 1.5rem auto 0;
+            li {
+                a {
+                    color: $primary-color-darkbg;
+                    font-weight: 400;
+                    font-size: 13px;
+                }
+                &:not(:last-of-type) {
+                    a {
+                        background-image: url("../img/arrow-bread.png");
+                        padding-right: 2.25rem;
+                        background-repeat: no-repeat;
+                        background-position: right 8px center;
+                    }
+                }
+                &:last-of-type {
+                    a {
+                        font-weight: 500;
+                    }
+                }
+            }
+        }
+    }
 }
