--- a/scss/defaults/variables.scss
+++ b/scss/defaults/variables.scss
@@ -7,6 +7,7 @@ $secondary-color-darkbg: #989fab;
 $background-color: #fff;
 $background-color-dark: #000;
 $background-color-grey: #252525;
+$background-color-light: #f5f5f5;
 
 $highlight-color: #e30f20;
 
