--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,9 +13,11 @@
 @import "components/gallery.scss";
 @import "components/brands.scss";
 @import "components/footer.scss";
+@import "components/contactform.scss";
 
 // Pages
 @import "pages/subpage.scss";
+@import "pages/contact.scss";
 
 // Style 
 @media (min-width: map-get($breaks, "xxl")) {
