--- a/scss/pages/contact.scss
+++ b/scss/pages/contact.scss
@@ -7,6 +7,12 @@
             margin-bottom: 3rem;
         }
     }
+    h3 {
+        font-size: 25px;
+        line-height: 32px;
+        margin-bottom: 0.5rem;
+        font-weight: 600;
+    }
     &__address {
         background-image: url("../img/icon-pinred.png");
     }
