--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -35,6 +35,9 @@
             }
             &.header__button {
                 display: none;
+                a {
+                    width: 100%;
+                }
                 @include media("xxl") {
                     display: block;
                 }
@@ -113,6 +116,7 @@
         background-image: url("../img/subpage-bg.png");
         background-position: center center;
         background-repeat: no-repeat;
+        background-size: cover;
     }
     &__breadcrumb {
         text-align: center;
@@ -129,6 +133,9 @@
             list-style: none;
             @include widthFit();
             margin: 1.5rem auto 0;
+            @include media("sm") {
+                display: none;
+            }
             li {
                 a {
                     color: $primary-color-darkbg;
